fixed misaligned sales partner page

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -16,12 +16,17 @@
     margin: 1rem;
     color: whitesmoke;
   }
-  button {
+  .link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     border: none;
     border-radius: 10px;
     background-color: green;
     width: 20rem;
     height: 3rem;
+    font-size: 1.5rem;
     color: whitesmoke;
     font-family: Montserrat-alternates, sans-serif;
   }
