--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -1,41 +1,34 @@
 .partner {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-flow: column;
-  height: 100vh;
-
-  .title {
-    margin-top: 2rem;
-  }
+  padding: 1rem;
+  height: 100%;
   picture {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0.5rem;
     img {
-      width: 95%;
+      margin: 1rem 0;
     }
   }
-  section {
-    .btn {
-      font-family: Asap, sans-serif;
-      border: none;
-      border-radius: 5px;
-      background-color: green;
-      color: whitesmoke;
-      height: 3rem;
-      margin: 0.5rem;
+  .buttons {
+    margin-bottom: 1rem;
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      button {
+        margin: 1rem 0.5rem;
+        border-radius: 5px;
+        border: none;
+        cursor: pointer;
+      }
     }
   }
-  .quote {
-    margin: 0 1rem;
-    line-height: 1.3rem;
-    figure {
-      blockquote {
-        p {
-          font-family: Montserrat-alternates, sans-serif;
-        }
+  figure {
+    blockquote {
+      p {
+        border-bottom: 1rem;
       }
     }
   }
